--- a/slider-moving-value-label/val-with-thumb.css
+++ b/slider-moving-value-label/val-with-thumb.css
@@ -12,7 +12,11 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(135deg, var(--inverBack) 0%, #c3cfe2 100%);
+  background-image: linear-gradient(
+    135deg,
+    var(--inverBack) 0%,
+    rgba(65, 203, 170, 0.2) 100%
+  );
   font-family: "Lato", sans-serif;
   color: var(--greyViva);
   display: flex;
