--- a/style.css
+++ b/style.css
@@ -20,10 +20,19 @@ body {
   --bs-btn-border-color: var(--viva);
   --bs-btn-hover-bg: var(--viva);
 }
+.card {
+  border: none;
+
+  box-shadow: 0 0 3px var(--greyVivaLight);
+}
 .card-body {
   background: var(--inverBack);
 }
 /* background color */
 body > div {
-  background: var(--inverBack);
+  background-image: linear-gradient(
+    135deg,
+    var(--inverBack) 0%,
+    rgba(65, 203, 170, 0.2) 100%
+  );
 }
