--- a/style.css
+++ b/style.css
@@ -41,3 +41,8 @@ body > div {
 .navbar {
   background: rgba(65, 203, 170, 0.2) 100%;
 }
+.footer-icon {
+  height: 3em;
+  width: 3em;
+  border: none;
+}
