--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ body {
 }
 /* background color */
 body > div {
-  background-image: linear-gradient(
-    135deg,
-    var(--inverBack) 0%,
-    rgba(65, 203, 170, 0.2) 100%
-  );
 }
 .navbar {
-  background: rgba(65, 203, 170, 0.2) 100%;
+  padding: 3em;
+}
+.footer-icon {
+  height: htmem;
+  width: 3em;
+  border: none;
 }
